--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container2">
         <div class="box1">
             <div class="title-box"></div>
-            <h1 class="title">Sleep Survey</h1>
+            <h1 class="title">Sleep Surveyy</h1>
             <p class="title-text">This form collects data on individuals' sleep habits, specifically the number of hours they typically sleep per night.  Your responses will help us understand sleep patterns and trends.  All information provided will be kept confidential.</p>
             <div class="required-box">
                 <p class="required">* Indicates required question</p>
