--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container2">
         <div class="box1">
             <div class="title-box"></div>
-            <h1 class="title">Sleep Surveyy</h1>
+            <h1 class="title">Sleep Survey</h1>
             <p class="title-text">This form collects data on individuals' sleep habits, specifically the number of hours they typically sleep per night.  Your responses will help us understand sleep patterns and trends.  All information provided will be kept confidential.</p>
             <div class="required-box">
                 <p class="required">* Indicates required question</p>
@@ -51,12 +51,10 @@
         </div>
         <div class="clear-div">
         <button class="submit-btn"><a class="ee" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Submit</a></button>
-        <p class="clear-form">Clear form</p>
         <div class="bottom-text">This form was created inside of Melrose Public Schools.<br>
             Does this form look suspicious? <a class="href" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Report</a></div>
         </div>
         <div class="image">
-        <img src="https://www.gstatic.com/images/branding/googlelogo/svg/googlelogo_dark_clr_74x24px.svg">
     </div>
     </div>
 </div>
